--- a/.env.production
+++ b/.env.production
@@ -2,9 +2,9 @@
  # @Description: 
  # @Author: Liu Yang
  # @Date: 2023-03-17 14:02:50
- # @LastEditTime: 2023-03-23 11:44:19
+ # @LastEditTime: 2025-05-27 11:47:33
  # @LastEditors: Liu Yang
- # @FilePath: \vue3\.env.production
+ # @FilePath: \template-app\.env.production
 ### 
 VITE_API_BASE_URL = "http://39.105.59.89:2000"
 # 系统标题
@@ -15,7 +15,7 @@ VITE_VUE_APP_AMAP_KEY = YREv2XD60z3cmC0y7NaqLp58LuNQZp1T
 VITE_VUE_WS_API = wss://devapi.weatherone.net
 # VITE_VUE_ROUTER_BASE = '/vue3'
 # 路由Baseurl
-VITE_VUE_ROUTER_BASE = '/shenfei/'
+VITE_VUE_ROUTER_BASE = '/vite-vue3-ts-template/'
 # axios Baseurl
 VITE_VUE_APP_API =https://guard.weatherone.net/api
 
