--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
  # @Description: 
  # @Author: Liu Yang
  # @Date: 2023-03-17 14:02:50
- # @LastEditTime: 2025-05-27 11:47:33
+ # @LastEditTime: 2025-05-27 12:33:06
  # @LastEditors: Liu Yang
  # @FilePath: \template-app\.env.production
 ### 
@@ -15,7 +15,7 @@ VITE_VUE_APP_AMAP_KEY = YREv2XD60z3cmC0y7NaqLp58LuNQZp1T
 VITE_VUE_WS_API = wss://devapi.weatherone.net
 # VITE_VUE_ROUTER_BASE = '/vue3'
 # 路由Baseurl
-VITE_VUE_ROUTER_BASE = '/vite-vue3-ts-template/'
+VITE_VUE_ROUTER_BASE = '/vite-vue3-ts-template/dist/'
 # axios Baseurl
 VITE_VUE_APP_API =https://guard.weatherone.net/api
 
